@@ -117,6 +117,12 @@ and new names should be listed for reference.
 
 7.26
 ----
+include/bu/hash.h
+	bu_hash_tbl_find, bu_set_hash_value, bu_get_hash_value, bu_get_hash_key,
+        bu_hash_tbl_add, bu_hash_tbl_print, bu_hash_tbl_free, bu_hash_tbl_first,
+        bu_hash_tbl_next, bu_hash_tbl_traverse, public structs bu_hash_entry and
+        bu_hash_tbl will be made private.
+        Replaced with new API [deprecated 7.26]
 rtrad, bot_shell-vtk, rt_bot_faces, g-nmg, nmg-bot, nmg-rib, nmg-sgp, plot3-hpgl,
 plot3-tk, plot3-X, fix_polysolids, terrain, pixinfo.sh, png_info, dbcp, buffer,
 hex, bw-d, c-d, d-bw, d-f, d-i, d-u, f-d, f-i, i-d, -if, u-bw, u-d, u-f
